<resources>

    <!--    rule -->
    <string name="app_name">image</string>
    <string name="rule_name">源名称</string>
    <string name="rule_url">源地址</string>
    <string name="rule_sort">分类</string>
    <string name="rule_home_list">首页图片列表(homeList)</string>
    <string name="rule_home_href">链接规则(homeHref)</string>
    <string name="rule_src">图片url规则(homeSrc)</string>
    <string name="rule_title">标题规则(homeTitle)</string>
    <string name="rule_img_page_list">图片内容显示(imagePageList)</string>
    <string name="rule_img_page_src">图片url(显示图片页)规则(imagePageSrc)</string>
    <string name="rule_method">请求方法(get/post)</string>
    <string name="rule_cookie">cookie(用于登录)</string>
    <string name="rule_add_js">添加js库</string>
    <string name="rule_js_method">js请求方法(用于post请求)</string>

    <!--     home-->
    <string name="page_num">页码</string>
    <string name="edit_rule">编辑规则</string>
    <string name="remove_rule">删除规则</string>
    <string name="add_rule">添加规则</string>
    <string name="add_local_rule">导入本地规则</string>
    <string name="net_add_rule">导入网络规则</string>
    <string name="copy_rule">复制当前规则</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!--   footer_bar -->
    <string name="normal_load">正在加载</string>
    <string name="network_error">┭┮﹏┭┮ , 加载失败</string>
</resources>